--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             margin-bottom: 2rem;
             padding-bottom: 1rem;
             border-bottom: 1px solid var(--border);
+            text-align: center;
         }
 
         header h1 {
